# langchain_sample

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: create_release.yaml
langchain_sample/: chat_and_template.py  chat_and_template2.py  langchain_minutes.py  send_notion.py
langchain_sample/arXiv/: arXiv_test.h5  paper_minutes.py
langchain_sample/minutes/: loader.py  main.py  resend_minutes.py
langchain_sample/wikipedia_langchain/: wikipedia_chain.py
lark/: client.py
pandas_hdf/: data_collector.py
scholarly_api/: client.py
tests/: FilePathTestCase.py  minutes_test.py
tests/resoces/: airtrack-refactor.txt  末広さん、鈴木さん (2022-10-11 14_44 GMT+9).txt
