[metadata]
name = test_pkg
version = 1.0.2
description = Ardupilot pid envaluation tool
long_description = file: README.rst, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
  tests

